fix some issues with layout scrollbars cross browser along with nav issues

--- a/src/layouts/base/base.css
+++ b/src/layouts/base/base.css
@@ -1,6 +1,6 @@
 :root {
     --loader-size: 200px;
-    --reveal-ms: 1200ms;
+    --reveal-ms: 800ms;
 }
 
 /* Base (hidden by default) */
